23-add-templates-after-add-patch-to-beer-controller - done
